:green_heart: Upgrade CI/CD pipeline to use latest LTS release of Java